# GenerateCodeHk

./: .gitignore  README.md  pyproject.toml
Codes/: CodigoH2GrafoConfig.txt  CodigoH2PL.txt  CodigoH3GrafoConfig.txt  CodigoH3PL.txt  CodigoH4GrafoConfig.txt  CodigoH4PL.txt  CodigoH5PL.txt  CodigoH6PL.txt  CodigoH7PL.txt
GenerateCodeHk/: ExibeCodigo.py  GenerateHkCode.py  GeraCodigoHkGubobi.py  GeraCodigoHkGubobiV2.py  Hk_lemon_eng.cc  Hk_lemon_engV2.cc  Hk_lemon_eng_6bar.cc  Hk_lemon_eng_8bar.cc
GenerateCodeHk/RegularGrids/: HexagonalGrid.py
GenerateCodeHk/Utilities/: DrawCode.py
GenerateCodeHk/Utils/: BuildGrid.py
